--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           projectPath: EndlessRunDemo
           unityVersion: 2019.2.11f1
-          targetPlatform: StandaloneWindows64
+          targetPlatform: Android
 
       # Output
       - uses: actions/upload-artifact@v1
@@ -198,7 +198,7 @@ jobs:
         unityVersion:
           - 2019.2.11f1
         targetPlatform:
-          - StandaloneWindows64 # Build a Windows 64-bit standalone.
+          - Android  # Build a Windows 64-bit standalone.
 
     steps:
       - uses: actions/checkout@v2
