--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 ﻿name: Builds
 
 on:
-  push: { branches: [main] }
+  push: { branches: [master] }
   pull_request:
     paths-ignore:
       - '.github/**'
