--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         projectPath:
-          - test-project
+          - EndlessRunDemo
         unityVersion:
           - 2019.2.11f1
         targetPlatform:
