--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -65,3 +65,10 @@ jobs:
           name: Build (${{ matrix.unityVersion }})
           path: build
           retention-days: 14
+
+      - uses: softprops/action-gh-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        files: ./dist/*release.zip
+        prerelease: ${{ contains(github.ref, '-') }}
