--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -66,7 +66,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: Build (${{ matrix.unityVersion }})
+          name: Build
           path: build
           retention-days: 14
           files: ./dist/*Build.zip
