--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -61,17 +61,17 @@ jobs:
       ###########################
       #          Upload         #
       ###########################
-      #- uses: actions/upload-artifact@v2
-       # with:
-        #  name: Build
-         # path: build
-          #retention-days: 14
+      - uses: actions/upload-artifact@v2
+        with:
+          name: Build
+          path: build
+          retention-days: 14
           
       - uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: ${{ steps.myBuildStep.outputs.outputName }}
+          files: Android.apk
           prerelease: ${{ contains(github.ref, '-') }}
 
      
