--- a/.github/workflows/build-tests.yml
+++ b/.github/workflows/build-tests.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - v*
+    branches: [ master ]
   pull_request:
     paths-ignore:
       - '.github/**'
@@ -61,17 +62,17 @@ jobs:
       ###########################
       #          Upload         #
       ###########################
-      - uses: actions/upload-artifact@v2
-        with:
-          name: Build
-          path: build
-          retention-days: 14
+      # - uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Build
+      #     path: build
+      #     retention-days: 14
           
       - uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: build/Android.apk
+          files: build/*.apk
           prerelease: ${{ contains(github.ref, '-') }}
 
      
