--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,10 @@ max_line_length = 100
 tab_width = 2
 trim_trailing_whitespace = true
 
+# ReSharper properties
+resharper_csharp_indent_size = 4
+resharper_csharp_tab_width = 4
+
 [*.md]
 max_line_length = off
 trim_trailing_whitespace = false
@@ -19,3 +23,8 @@ max_line_length = off
 
 [COMMIT_EDITMSG]
 max_line_length = off
+
+[*.cs]
+indent_style = space
+indent_size = 4
+tab_width = 4
